# simple-quant

./: backtest.py  config.py  get_data.py  main.py  process_data.py  push_simple_quant.bat  pyproject.toml  readme.md  run_jupyter.bat  test.ipynb
anywidget_demo/: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
anywidget_demo/js/: candlePlugin.js  pointPlugin.js  rangePlugin.js  tool.js  tooltipPlugin.js  uplot-demo.jsx  wheelZoomPlugin.js  widget.css  widget.jsx
csv/CZCE.MA405/: CZCE.MA405 1800s 1000 2024-03-22 23_00_00.csv  CZCE.MA405 1800s 500 2024-03-22 23_00_00.csv  CZCE.MA405 300s 1000 2024-03-22 23_00_00.csv  CZCE.MA405 300s 2000 2024-03-22 23_00_00.csv  CZCE.MA405 300s 3000 2024-03-22 23_00_00.csv  CZCE.MA405 300s 6000 2024-03-22 23_00_00.csv  CZCE.MA405 900s 2000 2024-03-22 23_00_00.csv
csv/CZCE.RM405/: CZCE.RM405 300s 3000 2024-03-22 23_00_00.csv  CZCE.RM405 300s 6000 2024-03-22 23_00_00.csv
csv/CZCE.TA405/: CZCE.TA405 300s 6000 2024-03-22 23_00_00.csv
csv/DCE.c2405/: DCE.c2405 300s 3000 2024-03-22 23_00_00.csv  DCE.c2405 300s 6000 2024-03-22 23_00_00.csv
csv/DCE.l2405/: DCE.l2405 300s 6000 2024-03-22 23_00_00.csv
csv/DCE.m2405/: DCE.m2405 300s 1000 2024-03-22 23_00_00.csv  DCE.m2405 300s 2000 2024-03-22 23_00_00.csv  DCE.m2405 300s 3000 2024-03-22 23_00_00.csv  DCE.m2405 300s 500 2024-03-22 23_00_00.csv  DCE.m2405 300s 6000 2024-03-22 23_00_00.csv  DCE.m2405 900s 2000 2024-03-22 23_00_00.csv
csv/SHFE.rb2405/: SHFE.rb2405 300s 100 2024-03-22 23_00_00.csv  (+6 more)
simple_quant/: add_ta.py  backtest.py  get_data.py
(+10 files in other folders)
