
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "ipykernel>=6.29.3",
    "requests>=2.31.0",
    "chinese-calendar>=1.9.1",
    "anywidget>=0.9.3",
    "json-logic>=0.6.3",
    "pandas-ta>=0.3.14b0",
    "setuptools>=69.2.0",
    "jinja2>=3.1.3",
    "nbviewer>=1.0.1",
    "jupyter>=1.0.0",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
